--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
-    "@sap/ux-specification": "^1.108.13"
+    "@sap/ux-specification": "^1.108.13",
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0"
   },
   "scripts": {
     "start": "cds-serve",
+    "test": "mocha",
     "watch-Bookshop.MyBookshop": "cds watch --open Bookshop.MyBookshop/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "cds": {
