added a basic test to check CI/CD retry

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "cds-serve",
-    "test": "mocha",
+    "test": "mocha test/test.js",
     "watch-Bookshop.MyBookshop": "cds watch --open Bookshop.MyBookshop/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "cds": {
