--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@sap/cds-hana": "^2",
     "@sap/low-code-event-handler": "^1.2.3",
     "@sap/mdk-tools": "^1.3.1",
-    "@sap/xsenv": "^4.0.0",
+    "@sap/xsenv": ">=3.3.2 <3.3.3",
     "@sap/xssec": "^3.3.3",
     "express": "^4",
     "hdb": "^0.19.5",
